workshop04/resources/app/ing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minions
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: console-209.38.57.64.sslip.io
      http:
        paths:
          # any request that comes in to path /, goes to the backend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console-svc
                port:
                  number: 9001
    - host: data-209.38.57.64.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-data-svc
                port:
                  number: 9000
